And I'm back with more spelling fixes

--- a/localisation/KR_Canada_l_english.yml
+++ b/localisation/KR_Canada_l_english.yml
@@ -30,7 +30,7 @@ quebec_riots:0 "Riots in Quebec"
 quebec_riots_desc:0 "The people of Quebec, confronted with the news of our patriotic war, have refused to defend their nation and instead have taken to the streets to protest. While some of them merely state that Canada, especially a Canada ruled by English elites, is not their nation, we know better than to believe those deserters and cowards."
 
 anglo_french_tensions:0 "Anglo-French Tensions"
-anglo_french_tensions_desc:0 "Tensions are high in Quebec as the old rivalries between Anglo-Canadians and French-Canadians contine to flare due to the exile of the English government and the generally pitious international situation of the French and English peoples. Unpopular measures like mass conscription could provoke riots, or worse."
+anglo_french_tensions_desc:0 "Tensions are high in Quebec as the old rivalries between Anglo-Canadians and French-Canadians continue to flare due to the exile of the English government and the generally pitious international situation of the French and English peoples. Unpopular measures like mass conscription could provoke riots, or worse."
 
 CAN_winter_soldiers:0 "Cold Weather Training"
 CAN_winter_soldiers_desc:0 "There are few places on earth with as harsh an environment as Northern Canada. We should establish barracks in the outback to serve as training utilities to accustom our soldiers to harsher climates. While this might upset new recruits, they will thank us when they see their enemies freeze to death before them without firing a shot."
