--- a/localisation/KR_Pacific_States_of_America_l_english.yml
+++ b/localisation/KR_Pacific_States_of_America_l_english.yml
@@ -7,10 +7,10 @@ CAL_civil_war_desc:0 "Chaos rages in the eastern part of the United States as th
 ### Foci - Political ###
 CAL_beacon_of_democracy:0 "Beacon of Democracy"
 CAL_beacon_of_democracy_desc:0 "With Syndicalists in the Midwest and American First members in the South and everything in between in the rest of the country, the east is losing the democracy of America. We on the Pacific coast remain the last beacon of democracy. We shall remain a bright light in a dark time. "
-CAL_encourge_free_thought:0 "Encourge Free Thought"
+CAL_encourge_free_thought:0 "Encourage Free Thought"
 CAL_encourge_free_thought_desc:0 "The west thrives on innovation and entrepreneurs. This can only be possible through free thought. We should not silence those that might oppose us. Instead we should welcome it and encourage it. The scientists that come to the Pacific States from the Civil War in the East will be happy to find safe refugee in our country. "
 CAL_defend_democarcy:0 "Defend Democracy"
-CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left on the contient. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
+CAL_defend_democarcy_desc:0 "We stand as one of the last bastions of American Democracy left on the continent. While the east has fallen into chaos or worse, we have remained not only prosperous but kept the democratic values that made America great. Let the west coast light shine forever."
 CAL_progressive_capitalism:0 "Progressive Capitalism"
 CAL_progressive_capitalism_desc:0 "We are prosperous while the east has fallen into depression and chaos. Part of that is due to how progressive and capitalist we are here in the East. Those two go hand in hand to create a prosperous country."
 CAL_initiative_referendum:0 "Initiatives and Referendums"
@@ -114,7 +114,7 @@ CAL_expand_universities_desc:0 "We have a number of universities in our country.
 CAL_californian_dream:0 "Pacifican Dream"
 CAL_californian_dream_desc:0 "There was the American Dream where someone could come to America and make a living and through hard-work and persistence become rich or at least comfortable.  While in the east that dream seems to have died a bloody death, out here in the west coast it is a live and well. It is however no longer the American Dream but the Pacifican Dream. "
 CAL_big_bussiness:0 "Support Big Business"
-CAL_big_bussiness_desc:0 "To help industrialize the country and prepare once the civil war comes east, we should support the numerous big businesses and firms that have a vested interest in those fields. By working closely with them we can help enhance and enrich not just those at the top but the workers of the Pacific too."
+CAL_big_bussiness_desc:0 "To help industrialise the country and prepare once the civil war comes east, we should support the numerous big businesses and firms that have a vested interest in those fields. By working closely with them we can help enhance and enrich not just those at the top but the workers of the Pacific too."
 CAL_expand_rail_componies:0 "Expand railroad companies"
 CAL_expand_rail_componies_desc:0 "There are a number of railroad companies throughout our new country, Southern Pacific, Union Pacific, Western Pacific and more. The civil war is disrupting their trade which will harm our prosperity. To avoid this we should encourage them to build in our new country and relocate here. "
 CAL_expand_mining_companies:0 "Expand mining companies"
@@ -136,13 +136,13 @@ CAL_australasia_freindship_desc:0 "As we work with our new allies we should work
 CAL_join_isac:0 "Join ISAC"
 CAL_join_isac_desc:0 "Now that our campaign to win the rest of the Entente over has succeeded we can work on joining ISAC, the Imperial Scientific and Academic Council. With our research now fully part of the Entente, our safety is ensured. "
 CAL_join_mittle_europa:0 "Join Mitteleuropa"
-CAL_join_mittle_europa_desc:0 "The best defense against the ravages of Syndicalism is to side with the Germans. We already do business with their numerous colonies so aligning ourselves should be rather easy. "
+CAL_join_mittle_europa_desc:0 "The best defence against the ravages of Syndicalism is to side with the Germans. We already do business with their numerous colonies so aligning ourselves should be rather easy. "
 CAL_californian_aog_offices:0 "Open AOG offices"
 CAL_californian_aog_offices_desc:0 "Of all the German Companies that we do business with, the one that we work with the most is the AOG. We should work to open up several business offices in the Pacific for the AOG and other German Companies. As well making sure that Pacific Businesses have offices oversees in Germany and the AOG as well. "
 CAL_german_freindship:0 "German Friendship"
-CAL_german_freindship_desc:0 "We should work to help make sure that we are on good terms with the German Empire. We have joined them but we should make sure that our new found allies will trust us and know that we are committed to Mittleuropa. "
+CAL_german_freindship_desc:0 "We should work to help make sure that we are on good terms with the German Empire. We have joined them but we should make sure that our new found allies will trust us and know that we are committed to Mitteleuropa. "
 CAL_join_kaiser_society:0 "Join The Kaiser Willhelm Society"
-CAL_join_kaiser_society_desc:0 "Now that we have good ties both business and political with the German Empire we should seek to join The Kaiser Willhelm Society. By working with the Germans we can help improve our own research potential and improve theres as well. "
+CAL_join_kaiser_society_desc:0 "Now that we have good ties both business and political with the German Empire we should seek to join The Kaiser Willhelm Society. By working with the Germans we can help improve our own research potential and improve theirs as well. "
 CAL_join_japan:0 "Join the Co-prosperity Sphere"
 CAL_join_japan_desc:0 "We have had a good relation with the Japanese empire before we became independent and now that we are they remain one of our top trading partners. We should seek to forge an even stronger relationship with the Japanese Empire and join their Co-Prosperity Sphere. "
 CAL_japanese_freindship:0 "Japanese Friendship"
@@ -150,7 +150,7 @@ CAL_japanese_freindship_desc:0 "Now that we have joined the Co-Prosperity Sphere
 CAL_japanes_bussiness:0 "Japanese-Californian businesses"
 CAL_japanes_bussiness_desc:0 "We should make sure to improve our business with the Japanese. Both of our countries business interests often overlap and a trade treaty will help both of our countries businesses and trade and bring prosperity to both of us.  "
 CAL_japanese_research_cooperation:0 "Join Rikagaku Kenkyusho"
-CAL_japanese_research_cooperation_desc:0 "Now that we have good ties both business and political with the Japanese Empire we should seek to join Rikagaku Kenkyusho. By working with the Japanese we can help improve our own research potential and improve theres as well. "
+CAL_japanese_research_cooperation_desc:0 "Now that we have good ties both business and political with the Japanese Empire we should seek to join Rikagaku Kenkyusho. By working with the Japanese we can help improve our own research potential and improve theirs as well. "
 CAL_american_autonomy:0 "American Autonomy"
 CAL_american_autonomy_desc:0 "The Civil War has come to an End and the Old Republic was victorious. It would do us good to rejoin the USA. However we should make it clear that we shall keep our autonomy that we have forged in the chaos of the civil war."
 CAL_school_of_ameirca:0 "School of America"
