--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -17,7 +17,7 @@ part.11.a:0 "We have no choice."
 part.11.b:0 "We will never accept your proposal!"
 
 part.12.t:0 "The Second treaty of Brest-Litovsk."
-part.12.d:0 "The Government of the German Empire, seeing no other choice, accepted our offer. The humiliatition they brought upon us with the Brest-Litovsk treaty is now but a distant memory! In accordance with our agreement we are now giving the German provinces we conquered back to the German Empire."
+part.12.d:0 "The Government of the German Empire, seeing no other choice, accepted our offer. The humiliation they brought upon us with the Brest-Litovsk treaty is now but a distant memory! In accordance with our agreement we are now giving the German provinces we conquered back to the German Empire."
 part.12.a:0 "A small price for a great victory!"
 
 part.13.t:0 "The darkest hour of the German Empire"
@@ -32,7 +32,7 @@ part.15.t:0 "The Kaiserliches Heer"
 part.15.d:0 "Form up the Active Defense!"
 part.15.a:0 "Form up the Troops!"
 
-part.16.t:0 "Choosing the new german Head of State."
+part.16.t:0 "Choosing the new German Head of State."
 part.16.d:0 "We have the opportunity to install a member of the house of Romanov as the new Emperor of Germany. It may, however, be wise to let the germans choose their own government."
 part.16.a:0 "Grand Duke Boris will be Wilhelm V!"
 part.16.b:0 "Let the Germans decide, as long as they stay loyal."
@@ -232,7 +232,7 @@ part.57.d:0 "The new government in Hamburg is firmly under our control and north
 part.57.a:0 "A new stronghold of Syndicalism! Vive l'Internationale!"
 
 part.58.t:0 "Thuringia"
-part.58.d:0 "The Prussians control the state of Thuringia, the geographical center of the German heartland. Prussia is the strongest of the new German Syndicalist states and if we were to claim it as our own we may be able to get French support."
+part.58.d:0 "The Prussians control the state of Thuringia, the geographical centre of the German heartland. Prussia is the strongest of the new German Syndicalist states and if we were to claim it as our own we may be able to get French support."
 part.58.a:0 "Claim the State of Thuringia!"
 part.58.b:0 "Our resources are overstretched as it is."
 
@@ -346,7 +346,7 @@ part.78.d:0 "We will renounce our claims on the lands rightfully owned by German
 part.78.a:0 "We have to obey."
 
 part.79.t:0 "Forces armées françaises"
-part.79.d:0 "Form up the Active Defense!"
+part.79.d:0 "Form up the Active Defence!"
 part.79.a:0 "Form Up the Troops!"
 
 part.80.t:0 "France renounces her claims"
