--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -341,11 +341,11 @@ plcommon.24.b:0 "Ask Germany for help!"
 plcommon.24.c:0 "Ask Russia for help!"
 plcommon.24.e:0 "War will solve this!"
 plcommon.25.t:0 "Support the Commonwealth?"
-plcommon.25.d:0 "A diplomatic conflict erupted over the status of Galicia between Warsaw and Vienna. The leadership of the Commonwealth, knowing that they can´t win Galicia back without diplomatic and military aid are asking us for support..."
+plcommon.25.d:0 "A diplomatic conflict erupted over the status of Galicia between Warsaw and Vienna. The leadership of the Commonwealth, knowing that they can't win Galicia back without diplomatic and military aid are asking us for support..."
 plcommon.25.a:0 "Support the Commonwealth!"
 plcommon.25.b:0 "Do not support the Commonwealth"
 plcommon.26.t:0 "Support the Commonwealth?"
-plcommon.26.d:0 "A diplomatic conflict erupted over the status of Galicia between Warsaw and Vienna. The leadership of the Commonwealth, knowing that they can´t win Galicia back without diplomatic and military aid are asking us for support..."
+plcommon.26.d:0 "A diplomatic conflict erupted over the status of Galicia between Warsaw and Vienna. The leadership of the Commonwealth, knowing that they can't win Galicia back without diplomatic and military aid are asking us for support..."
 plcommon.26.a:0 "Support the Commonwealth!"
 plcommon.26.b:0 "Do not support the Commonwealth"
 plcommon.27.t:0 "Russia supports the Commonwealth!"
@@ -412,7 +412,7 @@ plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effectiv
 plcommon.42.a:0 "They will die for this!"
 plcommon.43.t:0 "Voldemaras' Army"
 plcommon.43.d:0 "to-do"
-plcommon.43.a:0 "Disband them immdeiately!"
+plcommon.43.a:0 "Disband them immediately!"
 plcommon.44.t:0 "The LPIT"
 plcommon.44.d:0 "to-do"
 plcommon.44.a:0 "This is very troubling."
@@ -424,7 +424,7 @@ plcommon.46.t:0 "Voldemaras' Coup"
 plcommon.46.d:0 "to-do"
 plcommon.46.a:0 "The coup succeeds."
 plcommon.46.b:0 "Hold them back!"
-plcommon.47.t:0 "Lithuanian Nationalists Sieze the Commonwealth!"
+plcommon.47.t:0 "Lithuanian Nationalists Seize the Commonwealth!"
 plcommon.47.d:0 "Earlier today, the Lithuanian Nationalist LTIP Party seized control of the government of the Commonwealth, arresting the king Mendog III and placing Augustinas Voldemaras in charge of the nation. Voldemaras officially withdrew the Commonwealth from Mitteleuropa and declared that the Commonwealth is now free from 'German domination.' We need to respond to this crisis immediately, so what should we do?"
 plcommon.47.a:0 "It is not our problem."
 plcommon.47.b:0 "Traitors!"
@@ -475,20 +475,20 @@ plcommon.60.t:0 "An Unacceptable Trade"
 plcommon.60.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
 plcommon.60.a:0 "To be expected..."
 plcommon.61.t:0 "A Referendum in Ruthenia"
-plcommon.61.d:0 "The territories that were rightfully Polish but ceded by the Treaty of Brest-Livotsk now lie under the control of the German puppet Ruthenia. We should seek a diplomatic solution to this problem, and we believe that a proper referendum on the territroies joining the Commonwelath is a proper way to handle this situation. We should amke the proposal ot the Ruthenians as soon as possible."
+plcommon.61.d:0 "The territories that were rightfully Polish but ceded by the Treaty of Brest-Livotsk now lie under the control of the German puppet Ruthenia. We should seek a diplomatic solution to this problem, and we believe that a proper referendum on the territories joining the Commonwealth is a proper way to handle this situation. We should make the proposal to the Ruthenians as soon as possible."
 plcommon.61.a:0 "I hope they agree."
 plcommon.62.t:0 "A Referendum?"
-plcommon.62.d:0 "The new Polish-Lithuanian Commonwealth has made a diplomatic request for a referndum to be held on the status of our border territories with their nation. If we agree, the territories will hold a vote to either stay with Ruthenia, or join the Commonwealth. How should we respond?"
+plcommon.62.d:0 "The new Polish-Lithuanian Commonwealth has made a diplomatic request for a referendum to be held on the status of our border territories with their nation. If we agree, the territories will hold a vote to either stay with Ruthenia, or join the Commonwealth. How should we respond?"
 plcommon.62.a:0 "It is the proper thing to do."
 plcommon.62.b:0 "Never!"
 plcommon.63.t:0 "The Ruthenians Agree"
 plcommon.63.d:0 "The Ruthenians have agreed to our referendum proposal, and the voting is due to begin shortly."
 plcommon.63.a:0 "Fantastic!"
 plcommon.64.t:0 "The Ruthenians Refuse"
-plcommon.64.d:0 "The Ruthenians have declined our suggestion to hold a referndum, citing our claims to the region as "outrageous" and "fantasy". This is a dissapointing outcome..."
+plcommon.64.d:0 "The Ruthenians have declined our suggestion to hold a referendum, citing our claims to the region as "outrageous" and "fantasy". This is a disappointing outcome..."
 plcommon.64.a:0 "We will find another way."
 plcommon.65.t:0 "The Referendum Begins"
-plcommon.65.d:0 "The agreed upon date has arrived, and along the border territroeis many Ruthenians are voting on whether to stay with our nation or join the Commonwealth. We could allow this voting to continue uninterrupted, or perhaps we could ensure our side won the vote..."
+plcommon.65.d:0 "The agreed upon date has arrived, and along the border territories many Ruthenians are voting on whether to stay with our nation or join the Commonwealth. We could allow this voting to continue uninterrupted, or perhaps we could ensure our side won the vote..."
 plcommon.65.a:0 "The vote shall continue."
 plcommon.65.b:0 "We must win at any cost."
 plcommon.66.t:0 "The Ruthenian Referendum"
@@ -513,8 +513,8 @@ PLC_social_democrat_party:0 "Free Polish Party"
 PLC_social_democrat_party_long:0 "The Free Polish Party"
 PLC_social_liberal_party:0 "People's Coalition"
 PLC_social_liberal_party_long:0 "The People's Coalition"
-PLC_market_liberal_party:0 "Democartic Party"
-PLC_market_liberal_party_long:0 "The Democartic Party"
+PLC_market_liberal_party:0 "Democratic Party"
+PLC_market_liberal_party_long:0 "The Democratic Party"
 PLC_social_conservative_party:0 "Patriotic Party"
 PLC_social_conservative_party_long:0 "The Patriotic Party"
 PLC_authoritarian_democrat_party:0 "Monarchist Party"
@@ -525,14 +525,14 @@ PLC_national_populist_party:0 "National-Radical Party"
 PLC_national_populist_party_long:0 "The National-Radical Party"
 
 ### Flags ###
-plc_polish_favor:0 "§RThis option will favor Poland in the makeup of the Commonwealth.§! \n"
-plc_lithuanian_favor:0 "§RThis option will favor Lithuania in the makeup of the Commonwealth.§! \n"
+plc_polish_favor:0 "§RThis option will favour Poland in the makeup of the Commonwealth.§! \n"
+plc_lithuanian_favor:0 "§RThis option will favour Lithuania in the makeup of the Commonwealth.§! \n"
 PLC_russian_forts_tooltip:0 "will gain a large fortification on the Russian border.\n"
 PLC_holding_our_gains_tooltip:0 "will gains city-wide fortifications. \n"
-PLC_coastal_forts_tooltip:0 "will recieve extensive coastal fortifications. \n"
+PLC_coastal_forts_tooltip:0 "will receive extensive coastal fortifications. \n"
 PLC_garrison_training_tooltip:0 "You will train Garrison Troops for your coastal area."
 PLC_chose_germany:0 "The Commonwealth remains in Mitteleuropa"
 PLC_chose_alone:0 "The Commonwealth leaves Mitteleuropa"
 PLC_chose_syndicalist:0 "The Commonwealth has Embraced Syndicalism"
-PLC_capital_bunker:0 "will recieve fortifications in the capital.\n"
+PLC_capital_bunker:0 "will receive fortifications in the capital.\n"
 PLC_select_capital:0 "A New Capital must first be selected.\n"
