--- a/localisation/KR_Princely_Federation_l_english.yml
+++ b/localisation/KR_Princely_Federation_l_english.yml
@@ -464,7 +464,7 @@ prf.177.t:0 "Resistance in [damage_state.GetName]!"
 prf.177.d:0 "Protests in the formerly-syndicalist state of [damage_state.GetName] have grown increasingly violent as of late, spurred on by what we believe to be a resistance group operating out of remote regions in the territory. Multiple terrorist bombings have accompanied the protests, and will likely continue until we fully assert control over [damage_state.GetName]'s people."
 prf.177.a:0 "Why can't they see reason?!"
 prf.178.t:0 "The Case of the Delhi Government's Officer Corps"
-prf.178.d:0 "The National Government has finally dislodged the last vestiges of British influence on the Indian sub-continent and enforced a truly native system of governance on the troublesome north-western provinces. Some of the officers who once swore loyalty to the Delhi Government have expressed wishes to continue to serve Mother India, placing the nation above political alignment. However, if we enroll these men we might face trouble from our own officers who resent serving alongside former enemies."
+prf.178.d:0 "The National Government has finally dislodged the last vestiges of British influence on the Indian sub-continent and enforced a truly native system of governance on the troublesome north-western provinces. Some of the officers who once swore loyalty to the Delhi Government have expressed wishes to continue to serve Mother India, placing the nation above political alignment. However, if we enrol these men we might face trouble from our own officers who resent serving alongside former enemies."
 prf.178.a:0 "The Nation needs every single man!"
 prf.178.b:0 "We have no need for British lapdogs!"
 prf.179.t:0 "The Fate of the Loyalist Princely States"
