--- a/localisation/KR_Serbia_l_english.yml
+++ b/localisation/KR_Serbia_l_english.yml
@@ -4,7 +4,7 @@
  SER_jingoism:0 "Jingoistic Reclaimers"
  SER_jingoism_desc:0 "Serbia lost the Weltkrieg and is reduced to a small rump state. The government however is very vocal about reconquering all lost territory and getting all Serbs to live in Serbia. As such, the country is highly militarised."
  SER_army_command:0 "Militarised Society"
- SER_army_command_desc:0 "The Serbian government recognizes the need for a strong military. The army is valued above all else, resulting in an efficient army command."
+ SER_army_command_desc:0 "The Serbian government recognises the need for a strong military. The army is valued above all else, resulting in an efficient army command."
  SER_heroic_spirit:0 "Heroic Spirit"
  SER_heroic_spirit_desc:0 "Inspired by victories and defeats of the past, the Serbian soldier will do everything to fight for their country."
  SER_strong_state_idea:0 "A Strong State"
@@ -12,7 +12,7 @@
  SER_free_society_idea:0 "Free Society"
  SER_free_society_idea_desc:0 "The new Serbia is a free society, where everyone is allowed to express their opinions and to partake in the democratic process. This results in people who are more willing to do their duty to the country."
  SER_science_idea:0 "Scientific Effort"
- SER_science_idea_desc:0 "The new democratic regime recognizes the need for larger investments into R&D."
+ SER_science_idea_desc:0 "The new democratic regime recognises the need for larger investments into R&D."
  SER_beacon_of_liberty:0 "Beacon of liberty"
  SER_beacon_of_liberty_desc:0 "Serbia is a democratic republic, a true beacon of liberty on the Balkans."
  SER_patriotic_spirit_idea:0 "Patriotic Spirit"
@@ -24,7 +24,7 @@
 
 ### Opinion Modifiers ###
  SER_orthodox_state_religion:0 "Orthodox state religion"
- SER_modern_and_secular:0 "Secularized"
+ SER_modern_and_secular:0 "Secularised"
  SER_orthodox_government:0 "Orthodox government"
 
 ### Tooltips ###
@@ -98,9 +98,9 @@
  SER_claim_dalmatia:0 "Claim Dalmatia"
  SER_claim_dalmatia_desc:0 "Serbia needs access to the Adriatic Sea. Dalmatia would be the best target for expansion in this direction."
  SER_status_of_montenegro:0 "Status of Montenegro"
- SER_status_of_montenegro_desc:0 "Now with our state finally stabilized, we must choose our stance towards the independent state of Montenegro. We can either try to bring them into the fold using the direct threat of military power or via more a subtle way of negotiations. Another option is to create an independent military bloc with Montenegro."
+ SER_status_of_montenegro_desc:0 "Now with our state finally stabilised, we must choose our stance towards the independent state of Montenegro. We can either try to bring them into the fold using the direct threat of military power or via more a subtle way of negotiations. Another option is to create an independent military bloc with Montenegro."
  SER_form_yugoslavia:0 "Form Yugoslavia"
- SER_form_yugoslavia_desc:0 "Serbia has succesfully prevailed against everyone who tried to prevent the unification of the western Balkans under our banner. We can now create Yugoslavia to finally unite the Slavic nations of the Balkan peninsula and bring peace to this troubled region!"
+ SER_form_yugoslavia_desc:0 "Serbia has successfully prevailed against everyone who tried to prevent the unification of the western Balkans under our banner. We can now create Yugoslavia to finally unite the Slavic nations of the Balkan peninsula and bring peace to this troubled region!"
  SER_claim_slovenia:0 "Claim Slovenia"
  SER_claim_slovenia_desc:0 "We have formed a union of the Slavic people, but the Slovenes still live outside Yugoslavia. We need to bring them into our country too."
  SER_a_serbian_nation:0 "A Serbian Nation"
@@ -109,19 +109,19 @@
  SER_extra_research_slot_ii_desc:0 "With our larger country we improve our research into different fields."
 ### Economy
  SER_new_economic_policy:0 "New Economic Policy"
- SER_new_economic_policy_desc:0 "Serbia needs a New Economic Policy, to advance our fledging economy. As a nation of peasants, we can choose to improve and modernize our agriculture. Another option is to push for a modern industrial complex in order to challenge other advanced nations."
+ SER_new_economic_policy_desc:0 "Serbia needs a New Economic Policy, to advance our fledgling economy. As a nation of peasants, we can choose to improve and modernise our agriculture. Another option is to push for a modern industrial complex in order to challenge other advanced nations."
  SER_agriculture:0 "Focus on Agriculture"
- SER_agriculture_desc:0 "As a nation of peasants, we need to improve and modernize our agriculture."
+ SER_agriculture_desc:0 "As a nation of peasants, we need to improve and modernise our agriculture."
  SER_expand_infrastructure:0 "Expand Infrastructure"
  SER_expand_infrastructure_desc:0 "It is important to have a modern infrastructure to support both civilian and military traffic."
  SER_support_peasants:0 "Support the Peasants"
- SER_support_peasants_desc:0 "Serbia has a large agraric sector, and we need to support the peasants in times of needs to ensure we will never experience famine."
+ SER_support_peasants_desc:0 "Serbia has a large agrarian sector, and we need to support the peasants in times of needs to ensure we will never experience famine."
  SER_mechanisation:0 "Mechanisation"
  SER_mechanisation_desc:0 "Our agriculture is backwards compared to other countries and we need to invest in mechanisation."
  SER_industry:0 "Focus on Industry"
  SER_industry_desc:0 "We need to push for a modern industrial complex in order to challenge other advanced nations."
  SER_expand_bor_mining_complex:0 "Expand Bor mining complex"
- SER_expand_bor_mining_complex_desc:0 "As a part of our industrialization program, a new larger pit has to be opened at the Bor mining complex. This expansion and modernization of our production capacities will help to support our growing industry."
+ SER_expand_bor_mining_complex_desc:0 "As a part of our industrialisation program, a new larger pit has to be opened at the Bor mining complex. This expansion and modernisation of our production capacities will help to support our growing industry."
  SER_war_industry:0 "War Industry"
  SER_war_industry_desc:0 "We need a larger war industry to support our military."
  SER_invest_in_railroads:0 "Invest in Railroads"
@@ -169,7 +169,7 @@
  SER_heavy_fighter_focus:0 "Heavy Fighter Effort"
  SER_heavy_fighter_focus_desc:0 "Bombers that operate far behind the frontline should have proper protection. We need to invest in modern heavy fighters which have a longer range."
  SER_expand_airfields:0 "Expand Airfields"
- SER_expand_airfields_desc:0 "We need to expand existing airfields and create new ones to accomodate our larger air force."
+ SER_expand_airfields_desc:0 "We need to expand existing airfields and create new ones to accommodate our larger air force."
  SER_rocket_effort:0 "Rocket Effort"
  SER_rocket_effort_desc:0 "Some interesting developments have been made in other countries in the last years. We need to keep up and look at advances in rocket and jet technology."
  SER_paratrooper_effort:0 "Paratrooper Effort"
@@ -182,10 +182,10 @@
  SER_buy_hms_lion:0 "Buy HMS Lion"
  SER_buy_hms_lion_desc:0 "Even though our navy started off well, we still lack the means for producing larger ships. In order to reach full capability, our navy requires a flag ship, which will be the pride of our country. Our naval officers have made a proposal to buy and overhaul an old Canadian cruiser."
  SER_focus_on_submarines:0 "Focus on Submarines"
- SER_focus_on_submarines_desc:0 "We will never be able to outgun other navies in the Mediterranean. Instead of surface vessels, we should focus on submarines to harrass enemy shipping from below the waves."
+ SER_focus_on_submarines_desc:0 "We will never be able to outgun other navies in the Mediterranean. Instead of surface vessels, we should focus on submarines to harass enemy shipping from below the waves."
  SER_expand_ports:0 "Expand Ports"
  SER_expand_ports_desc:0 "A navy needs to be properly supplied from our ports. We need to expand our existing ports to increase our capacity."
- SER_fleet_maneuvers:0 "Fleet Maneuvers"
+ SER_fleet_maneuvers:0 "Fleet Manoeuvres"
  SER_fleet_maneuvers_desc:0 "We need to test our fleet in combat simulations to prepare it for the conflicts to come, and to develop new tactics."
  SER_cruiser_effort:0 "Cruiser Effort"
  SER_cruiser_effort_desc:0 "With our navy established and our larger port capacity, we finally have the knowledge to build our own cruisers."
@@ -316,7 +316,7 @@ serbia.14.d:0 "The hero of the Balkan wars and the Weltkrieg has died today. A d
 serbia.14.a:0 "We will miss him."
 
 serbia.15.t:0 "Status of the Orthodox Church"
-serbia.15.d:0 "The Orthodox Church, under the leadership of the vocal Patriarch Varnava Rosic, is demanding a reclarification of its legal status in the Serbian state.  He wants a constitutional ammendment passed on the issue of the national religion."
+serbia.15.d:0 "The Orthodox Church, under the leadership of the vocal Patriarch Varnava Rosic, is demanding a reclarification of its legal status in the Serbian state.  He wants a constitutional amendment passed on the issue of the national religion."
 serbia.15.a:0 "Orthodoxy is our state religion."
 serbia.15.b:0 "We are modern and secular!"
 serbia.15.c:0 "The Orthodox Church must have a role in our government."
