--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -314,7 +314,7 @@ tram.80.a:0 "Kolchak's guards have managed to defeat the rebels"
 tram.80.b:0 "Kolchak was overthrown"
 
 tram.81.t:0 "Kolchak was overthrown"
-tram.81.d:0 "Aleksander Kolchak, leader of Transamur for more than 12 years, was overthrown by members of the general staff led by Sergei Wojciechowski and was executed by a firing squad. His death opens the field for various possiblities of political change in Transamur including the declaration of a republic, if Sergei Wojciechowski and his staff allows it."
+tram.81.d:0 "Aleksander Kolchak, leader of Transamur for more than 12 years, was overthrown by members of the general staff led by Sergei Wojciechowski and was executed by a firing squad. His death opens the field for various possibilities of political change in Transamur including the declaration of a republic, if Sergei Wojciechowski and his staff allows it."
 tram.81.a:0 "Sergei Wojciechowski is the new leader of Transamur!"
 tram.81.b:0 "A Republic is founded"
 
