--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -90,7 +90,7 @@ worldnews.14.d:0 "Ignas Šeinius, Lithuania's most famous impressionist writer, 
 worldnews.14.a:0 "The Entente wins? This isn't that bad!"
 worldnews.14.b:0 "The Entente wins and Germany falls to Syndicalism? What a horrible world!"
 worldnews.14.c:0 "Syndicalism shines a light of hope in such a dark world. Relatable."
-worldnews.14.e:0 "The Brusilov Offensive suceeding? Perhaps. But the Black Hundreds is a stretch!"
+worldnews.14.e:0 "The Brusilov Offensive succeeding? Perhaps. But the Black Hundreds is a stretch!"
 
 worldnews.15.t:0 "Assassination of President Kerensky"
 worldnews.15.d:0 "Kerensky has just been shot and killed while on the way to the Senate! The assailant was taken down by the police, but the goals and intentions of the attacker are unknown. Despite his massive unpopularity among the Russian people due to botched land reform and ineffective rule, Kerensky was nevertheless able to hold the country together for years, and his death has thrown Russia into chaos. The Senators are already discussing a possible replacement to Kerensky, new coalitions are being formed, both between the left and the right, while military men like Denikin, Wrangel and Kornilov are just one step away from intervening to dissolve democracy and 'save Mother Russia'."
@@ -102,7 +102,7 @@ worldnews.15.f:0 "Russia isn't watching anymore! We could make a move."
 
 worldnews.16.t:0 "The Platinean War"
 worldnews.16.d:0 "After the Great South American War of the 1930s, two regional powers emerged in South America - Brazil and Argentina, the latter of whom later evolved into the 'federation' of La Plata. Tensions between these two giants, former enemies in the War now turned rivals for South American domination, have been rising for years, and a La Platan victory against Paraguay and Bolivia did little to ease them.\n\nThe fragile peace in South America has been finally broken with the beginning of an outright war between the two countries, a war that the weakened US will probably not be able to stop. While La Platans are confident in a second victory, Brazilians are ready to achieve revenge for their defeat last time."
-worldnews.16.a:0 "Another proof of the growing unstability of the Americas."
+worldnews.16.a:0 "Another proof of the growing instability of the Americas."
 worldnews.16.b:0 "Whoever emerges victorious will shape South America in his image."
 worldnews.16.c:0 "We will get our revenge on the Argentinians. Argentina Delenda Est!"
 worldnews.16.e:0 "The Brazilians have some hubris. We will have no mercy on them this time!"
@@ -134,7 +134,7 @@ worldnews.20.t:0 "The End of American Democracy"
 worldnews.20.d:0 "Surprising news have arrived from the United States of America today. President Herbert Hoover, whose administration has proven to be incapable of stabilising the divided country and calming down the CSA and AFP militants, has invited General Douglas MacArthur to take the reins of the country with a junta of military men and corporate representatives.\n\nPresident MacArthur is a strong proponent of an 'iron fist' rule and opposes both Syndicalism and American pacifism. Large-scale crackdowns on the 'enemies of America' have already been reported."
 worldnews.20.a:0 "Needed or not, let us hope this is temporary."
 worldnews.20.b:0 "Another military junta rises in the Americas. Pathetic."
-worldnews.20.c:0 "The reactonaries usurp the people's elections. Telling!"
+worldnews.20.c:0 "The reactionaries usurp the people's elections. Telling!"
 worldnews.20.e:0 "We are doing what is necessary to safeguard our country."
 worldnews.20.f:0 "It looks like General MacArthur heeded our advice. Good."
 
@@ -152,7 +152,7 @@ worldnews.21.a:0 "Syndicalism stands ready to kill another healthy Democracy."
 worldnews.21.b:0 "Liberalism has degenerated into Syndicalism again. Sad."
 worldnews.21.c:0 "Congratulations to Reed and the American workers for a good choice!"
 worldnews.21.e:0 "The American workers have suffered enough. Time for Syndicalism!"
-worldnews.21.f:0 "We might have to intervene in American politics. Mobilize the troops."
+worldnews.21.f:0 "We might have to intervene in American politics. Mobilise the troops."
 
 worldnews.23.t:0 "The Polish-Lithuanian Commonwealth"
 worldnews.23.d:0 "In a surprising turn of events, the elections for the vacant throne of Poland have resulted in the restoration of a state thought to have been forgotten in history.\n\nDespite pressure from Austria and Germany, King Mindaugas III von Urach of Lithuania has been elected as the new King of Poland, and a new constitution was drafted to unite Poland and Lithuania back into the Commonwealth. It is not known if this new entity will be very stable, but the Poles seem to be enthusiastic."
@@ -306,7 +306,7 @@ worldnews.41.t:0 "The End of the American Civil War"
 worldnews.41.d:0 "The Second American Civil War, the bloodiest conflict to ever descend on the New World, is over. And as sobbing widows bury their dead husbands and sons, the defeated United States have been reunited by a breakaway state - the Pacific States of America. The Californian conquerors have so far been lenient on their occupation, but the supporters of all three other factions face a possible crackdown.\n\nDespite the paradoxical nature of their name, the Pacific States have not yet changed their name. Instead, the President is looking forward to aligning with the Entente, or maybe even Japan. America has fallen, and this war will never be forgotten."
 worldnews.41.a:0 "Talk about an outside bet. Will they rename themselves?"
 worldnews.41.b:0 "Pacific? Liberal? Disgusting, America is worse off now."
-worldnews.41.c:0 "The worst oppresors are the ones who call themselves pacific!"
+worldnews.41.c:0 "The worst oppressors are the ones who call themselves pacific!"
 worldnews.41.e:0 "This situation is no small conundrum, but we will solve it together as Americans"
 worldnews.41.f:0 "A very interesting situation, and an influencable partner. Splendid!"
 
@@ -333,13 +333,13 @@ worldnews.250.t:0 ""
 
 worldnews.251.t:0 "The Fall of London" #Germany
 worldnews.251.d:0 "Reports from London confirm that the English capital has been captured by advancing German troops after long, staged battles across the Thames river.\n\nUnion forces put up stiff resistance, hoping to delay the Imperial forces for as long as possible, but were eventually beaten back by the Germans.\n\nFor the first time since William the Conqueror, London has fallen to a foreign invader."
-worldnews.251.a:0 "This is only a temporary setback. We will reorganize and push them back to the Channel!"
+worldnews.251.a:0 "This is only a temporary setback. We will reorganise and push them back to the Channel!"
 worldnews.251.b:0 "This is the beginning of the end. We will set right what once went wrong."
 worldnews.251.c:0 "With London in German hands, defeat of Britain is inevitable."
 worldnews.251.e:0 "Germany now holds a very important bargaining chip for our return to the continent."
 
 worldnews.252.t:0 "The Fall of Chicago" #US
-worldnews.252.d:0 "The United States military has been pushing towards the Syndicate States' temporary capital of Chicago for a while now.\n\nReports are now coming in of Chicago's capture by advancing US troops. Reed's curent whereabouts are unknown, but it is believed that he has fled the city with milita units.\n\nReports indicate that military police has begun rounding up and arresting prisoner of wars and important Syndicalist figures. Is this the end of the Syndicate experiment in America?"
+worldnews.252.d:0 "The United States military has been pushing towards the Syndicate States' temporary capital of Chicago for a while now.\n\nReports are now coming in of Chicago's capture by advancing US troops. Reed's current whereabouts are unknown, but it is believed that he has fled the city with militia units.\n\nReports indicate that military police has begun rounding up and arresting prisoner of wars and important Syndicalist figures. Is this the end of the Syndicate experiment in America?"
 worldnews.252.a:0 "The fight is not over until they've got every single one of us!"
 worldnews.252.b:0 "We are on your tail, Reed. You will be tried for your crimes, you and your militia!"
 worldnews.252.c:0 "With such a victory on the Syndicalist traitors, the federal troops will soon be upon us."
@@ -355,7 +355,7 @@ worldnews.253.e:0 "We might want to intervene. Now. The situation is urgent beyo
 worldnews.253.f:0 "Whoever controls Washington D.C. controls America. At least once the fighting is over."
 
 worldnews.254.t:0 "The Fall of Chicago" #US
-worldnews.254.d:0 "The Minutemen have been pushing towards the Syndicate States' temporary capital of Chicago for a while now.\n\nReports are now coming in of Chicago's capture by advancing Union troops. Reed's curent whereabouts are unknown, but it is believed that he has fled the city with milita units.\n\nWidespread atrocities are being reported as Minutemen round up captured militia members and CSA activists to put them to the firing squad. Is this the end of the Syndicate experiment in America?"
+worldnews.254.d:0 "The Minutemen have been pushing towards the Syndicate States' temporary capital of Chicago for a while now.\n\nReports are now coming in of Chicago's capture by advancing Union troops. Reed's current whereabouts are unknown, but it is believed that he has fled the city with militia units.\n\nWidespread atrocities are being reported as Minutemen round up captured militia members and CSA activists to put them to the firing squad. Is this the end of the Syndicate experiment in America?"
 worldnews.254.a:0 "The fight is not over until they've got every single one of us!"
 worldnews.254.b:0 "We are on your tail, Reed. You will hang high for what you've done!"
 worldnews.254.c:0 "With such a victory on the Syndicalist traitors, the Minutemen will soon be upon us."
@@ -417,7 +417,7 @@ worldnews.260.t:0 "The Fall of Hong Kong" #Siam
 worldnews.260.d:0 "Troops from [SIA.GetNameDef] have captured the former British Crown Colony of Hong Kong after breaking through the Gin Drinkers Line and landing on Hong Kong Island itself. The situation soon became untenable for the defenders, and the Governor surrendered in person at the Peninsula Hong Kong hotel where the [SIA.GetAdjective] had established their headquarters.\n\nAfter a brief ceremony, a new [SIA.GetAdjective] governor was installed who announced a 'New Hong Kong' to the world, 'free of Western colonialism.'"
 worldnews.260.a:0 "The fall of Hong Kong is a serious blow to the Legation Cities."
 worldnews.260.b:0 "New Hong Kong will prosper, free from Western imperialism!"
-worldnews.260.c:0 "The Legation Cities will not tolerate this agression."
+worldnews.260.c:0 "The Legation Cities will not tolerate this aggression."
 worldnews.260.e:0 "Another strike on a former British colony, hopefully not a pattern."
 
 worldnews.261.t:0 "The Fall of Manila" #Siam
@@ -428,16 +428,16 @@ worldnews.261.c:0 "Retreat to the jungles, we will not let the Phillippines fall
 
 worldnews.262.t:0 "The Fall of Calcutta" #Siam
 worldnews.262.d:0 "After a period of heavy bombardment, it has now been confirmed that the city of Calcutta in the Bharatiya Commune has fallen to advancing [SIA.GetAdjective] forces. Following heavy fighting across Chowringhee avenue, silence once again fell across the city as the sounds of gunfire and artillery muted.\n\nClaims arise of [SIA.GetAdjective] troops patrolling the streets to maintain order in the populous Indian city as unverified claims of mass arrests and atrocities slowly trickle down to Asian newspapers. With the fall of Calcutta, many predict that all of Bharatiya Commune will soon follow."
-worldnews.262.a:0 "Calcutta, regional capital of Bengal, was cleary the last gate to India Proper."
+worldnews.262.a:0 "Calcutta, regional capital of Bengal, was clearly the last gate to India Proper."
 worldnews.262.b:0 "The people of Bengal and Assam have too long suffered under Indian rule."
-worldnews.262.c:0 "We have been bled but not defeated. Workers, resist the royalist oppresors!"
+worldnews.262.c:0 "We have been bled but not defeated. Workers, resist the royalist oppressors!"
 worldnews.262.e:0 "Siam has no business in India. Should Bharatiya fall, we must intervene."
 worldnews.262.f:0 "This is extremely concerning. Siam has no business in India, the old British Crown Jewel."
 
 worldnews.263.t:0 "The Fall of New Delhi" #Siam
 worldnews.263.d:0 "[SIA.GetAdjective] offensives continue in the Dominion of India, and the fall of New Delhi recently took place. As the capital of the Dominion of India, this city is of immense strategic importance and its loss may prove to be a decisive factor in the ongoing Indian campaign.\n\nThe Viceroy himself was reportedly captured by [SIA.GetAdjective] forward units while he was supervising the transfer of his belongings from the Viceroy's House to a truck caravan, but this has not yet been confirmed."
 worldnews.263.a:0 "New Delhi still was the capital of a divided India. And thus it falls."
-worldnews.263.b:0 "With New Delhi in our hands, we promise the Indian people freedom from Western infleunce."
+worldnews.263.b:0 "With New Delhi in our hands, we promise the Indian people freedom from Western influence."
 worldnews.263.c:0 "This is an absolute disaster, we must consult with our Entente allies, now!"
 worldnews.263.e:0 "Are Siamese Imperialists really any better than British Imperialists?"
 worldnews.263.f:0 "We cannot afford to lose our last bastion in Asia. Let us hold an emergency meeting."
@@ -446,7 +446,7 @@ worldnews.264.t:0 "The Fall of Bangkok" #Canada
 worldnews.264.d:0 "Earlier today, the victorious British soldiers march through the streets of Bangkok after fierce fighting for most of the day. Most building along the Ratchadamnoen road were ruined by the artillery barrage with the Union Jack is now raised over what is left of the old Ananta Samakhom throne hall that was used by the [SIA.GetAdjective] government as their parliament.\n\nThe [SIA.GetAdjective] king agreed to accept our post-war demand with lots of Seri Thai movement members now taking their pre-arranged provisional government positions as most old cabinet members are now presumed to be dead as their secret hiding place was bombed by one of our infiltrators beforehand."
 worldnews.264.a:0 "This rapid end to Siamese expansionism is a proof of strength for the Entente."
 worldnews.264.b:0 "Siam's madness ends here. They will make a fine addition to a resurgent British Empire."
-worldnews.264.c:0 "British Imperalists will never suppress the Siamese people. Never!"
+worldnews.264.c:0 "British Imperialists will never suppress the Siamese people. Never!"
 
 worldnews.265.t:0 "The Fall of Bangkok" #Japan
 worldnews.265.d:0 "As fighting dies down in Bangkok, the hinomaru already flies from every building across Bangkok, now renamed Bankoku, and Japanese officials have already implanted a new transitional administration to handle their new conquest.\n\nAlready, dissenters have been gathered up and driven off in the middle of the night, and the [SIA.GetAdjective] army units who have surrendered have begun a march to new camps being built for them in the countryside. Several local [SIA.GetAdjective] leaders have been offered seppuku, to atone for their failure and due to the possibility of resistance rallying around them, the offer was not voluntary. Bangkok's Grand Palace has already begun renovations to be one of the Emperor's new seasonal residences."
