--- a/localisation/KR_Yunnan_l_english.yml
+++ b/localisation/KR_Yunnan_l_english.yml
@@ -76,7 +76,7 @@ yunnan.1.t:0 "The Baoshan Warlords"
 yunnan.1.d:0 "A warlord in Baoshan has gathered a small army from local gangs and militias and now they sweep through the countryside, causing chaos and destruction."
 yunnan.1.a:0 "The Baoshan Province Will Learn to Respect Our Authority!"
 yunnan.2.t:0 "The Warlords Have Been Put Down"
-yunnan.2.d:0 "Our troops archieved victory over the rebels at Baoshan! Their army has surrendered with little resistance and the warlord was publicly hanged. Baoshan is at peace once more."
+yunnan.2.d:0 "Our troops archived victory over the rebels at Baoshan! Their army has surrendered with little resistance and the warlord was publicly hanged. Baoshan is at peace once more."
 yunnan.2.a:0 "Yunnan will not tolerate any new cliques"
 yunnan.3.t:0 "To raid or not to raid"
 yunnan.3.d:0 "One of our generals feels that starting cross border raids might net us a fair amount of money and supplies to help us develop our industry, and we can always blame it on bandits!"
@@ -112,7 +112,7 @@ yunnan.11.d:0 "Yun has returned our investor and personally apologised for the i
 yunnan.11.a:0 "Cross the border and end the Clique forever!"
 yunnan.11.b:0 "We accept the apology"
 yunnan.12.t:0 "The Shining Path of Yunnan"
-yunnan.12.d:0 "Yunnan, a state controlling a good part of Central China, is still regarded as not much more than a warlord domain by the international community. Lately, as nationalist sentiment and talks of reunification are being spread across all of the Middle Kingdom, some of our intelligentsia and military class have started supporting an effort for Chinese Reunification spearheaded by Yunnan troops. Maybe its time to ressurect National protection movement and reunite China!"
+yunnan.12.d:0 "Yunnan, a state controlling a good part of Central China, is still regarded as not much more than a warlord domain by the international community. Lately, as nationalist sentiment and talks of reunification are being spread across all of the Middle Kingdom, some of our intelligentsia and military class have started supporting an effort for Chinese Reunification spearheaded by Yunnan troops. Maybe its time to resurrect National protection movement and reunite China!"
 yunnan.12.a:0 "Well, that's nonsense"
 yunnan.12.b:0 "Yes! China for the Chinese!"
 yunnan.13.t:0 "Republican refugees"
@@ -311,7 +311,7 @@ YUN_doctrine_effort_2:0 "Doctrine Effort II"
 YUN_doctrine_effort_2_desc:0 "The battlefield has changed not just in the interbellum years, but over the course of recent conflicts. We must continuously reevaluate our doctrines to reflect this."
 YUN_equipment_effort_3:0 "Equipment Effort III"
 YUN_equipment_effort_3_desc:0 "Instead of imitating or buying foreign equipment, we should aim to become world-leading in infantry weapons."
-YUN_armor_effort:0 "Armor Effort"
+YUN_armor_effort:0 "Armour Effort"
 YUN_armor_effort_desc:0 "Applying what we have learned from mechanising our infantry, we can improve our armoured vehicles as well."
 YUN_special_forces:0 "Special Forces"
 YUN_special_forces_desc:0 "We have need of elite forces; mountain troops and paratroopers should be our priority."
