--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -276,7 +276,7 @@ delhi.10.b:0 "Grant the princes a pension, but abolish their sovereignty!"
 delhi.10.c:0 "Abolish indirect rule and expropriate the princes!"
 
 delhi.11.t:0 "The Indian Economy Act"
-delhi.11.d:0 "The Indian economy is falling apart. Archaic trade regulations, corrupt tax collectors and abhorrent lack of foreign investment is driving a sword through the neck of economic progress. Calling for a liberalisation of the thriftiness of our nation, the merchants, business magnates and industrialists of the Indus Valley are calling for reform to sweep the economic currents of the Dominion. The Premier is himself not ill-disposed to these ideas which include a broad range of privatization, tax reforms, and institution of inflation-controlling measures. However, such a strong dose of liberalism might greatly upset the rural poor that still constitute the majority of the Dominion."
+delhi.11.d:0 "The Indian economy is falling apart. Archaic trade regulations, corrupt tax collectors and abhorrent lack of foreign investment is driving a sword through the neck of economic progress. Calling for a liberalisation of the thriftiness of our nation, the merchants, business magnates and industrialists of the Indus Valley are calling for reform to sweep the economic currents of the Dominion. The Premier is himself not ill-disposed to these ideas which include a broad range of privatisation, tax reforms, and institution of inflation-controlling measures. However, such a strong dose of liberalism might greatly upset the rural poor that still constitute the majority of the Dominion."
 delhi.11.a:0 "Indian freedom and Indian greatness demand a free market economy!"
 delhi.11.b:0 "An emancipated people needs a balanced economic system!"
 delhi.11.c:0 "Enforce a single market for a single nation!"
@@ -536,5 +536,5 @@ delhi.330.d:0 "Having resoundingly rejected the northern plan to peacefully inte
 delhi.330.a:0 "Rush to the aid of the princes!"
 delhi.330.b:0 "They are on their own - sorry"
 delhi.331.t:0 "Nehru Takes Over the Socialists"
-delhi.331.d:0 "With Gandhi now a memory, the young Jawaharlal Nehru - a prominent syndicalist leader from the former Bharatiya Commune who joined the socialist coalition upon union - has out-maneuvered Nirmal Kumar Bose to take the leadership of the Socialist Party. Bose, claiming to be completely blindsided by Nehru's actions, has elected to retire from politics."
+delhi.331.d:0 "With Gandhi now a memory, the young Jawaharlal Nehru - a prominent syndicalist leader from the former Bharatiya Commune who joined the socialist coalition upon union - has out-manoeuvred Nirmal Kumar Bose to take the leadership of the Socialist Party. Bose, claiming to be completely blindsided by Nehru's actions, has elected to retire from politics."
 delhi.331.a:0 "An ambitious man"
