--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -33,14 +33,14 @@ NEE_flexible_fire_control:0 "Flexible Fire Control"
 NEE_flexible_fire_control_desc:0 "We know that any plan won't survive first contact with the enemy. So thus we shall encourage our military to make the plans that can be rapidly changed at the front to take into account the changing nature of war."
 NEE_combined_arms:0 "Chipman's Combined Arms"
 NEE_combined_arms_desc:0 "Now that we have made the New England national guard, we should support Leslie Chipman's combined arms strategy for defending New England. We have a small population here in new England, so the key to war will be to strike fast and strike hard. This shall keep New England safe."
-NEE_walkie_talkies:0 "walkie-talkies"
+NEE_walkie_talkies:0 "Walkie-talkies"
 NEE_walkie_talkies_desc:0 "Working together with our Canadian friends and allies we have begun to develop a new hand held two way communication device that uses radio waves. This will greatly help communication during any conflict. It would be good to make sure that our National Guard has as many of these walkies-talkies to better defend New England."
 NEE_motorized_infantry:0 "Infantry Tank"
 NEE_motorized_infantry_desc:0 "As part of the Chipman's combined arms strategy we are to encourage the concept of Infantry Tanks. By having the Infantry and the tanks work in tandem with one another it will improve the efficiency of both are Tanks and our Infantry."
 NEE_curiser_tanks:0 "Cruiser Tanks"
 NEE_curiser_tanks_desc:0 "As part of the Combined Arms strategy, we should focus on researching and producing Cruiser Tanks. Tanks that will strike fast and hard, and be the tip of the spear that shall be followed up by our infantry who come in right after them."
 NEE_new_officers:0 "New Officers"
-NEE_new_officers_desc:0 "With the National Guard of New England's modernization nearly done. We should bring in the new officers from West Point into the Army. This will help provide a new generation of officers to help finish our modernizations of the Army."
+NEE_new_officers_desc:0 "With the National Guard of New England's modernisation nearly done. We should bring in the new officers from West Point into the Army. This will help provide a new generation of officers to help finish our modernisation of the Army."
 
 ### Foci - Naval ###
 NEE_coast_guard:0 "New England Coast Guard"
@@ -62,17 +62,17 @@ NEE_yankee_marines_desc:0 "We should create our own version of the Marine Corps 
 NEE_aviation:0 "New England Air Force"
 NEE_aviation_desc:0 "We should create the New England Air Force to defend the skies of New England. The question is should we favour bombers or fighters?"
 NEE_fighters:0 "Air support"
-NEE_fighters_desc:0 "To protect New England Skies we should embrace the doctrine of Air support. By working with our ground forces and using our air force to destroy the enemy will keep New England safe. "
+NEE_fighters_desc:0 "To protect New England Skies we should embrace the doctrine of Air support. By working with our ground forces and using our air force to destroy the enemy will keep New England safe."
 NEE_cas_effort:0 "Close Air Support"
-NEE_cas_effort_desc:0 "As we work with our Air force and our doctrine of Air Support, we should focus on Close Air Support aircraft. "
+NEE_cas_effort_desc:0 "As we work with our Air force and our doctrine of Air Support, we should focus on Close Air Support aircraft."
 NEE_bombers:0 "Air Supremacy"
-NEE_bombers_desc:0 "To protect New England Skies we should embrace the doctrine of Air Supremacy. By ruling the skies we will keep New England Safe from any danger. "
+NEE_bombers_desc:0 "To protect New England Skies we should embrace the doctrine of Air Supremacy. By ruling the skies we will keep New England Safe from any danger."
 NEE_expand_air_ports:0 "New Aviators"
-NEE_expand_air_ports_desc:0 "As we work on building up the Air Force of New England we should bring in our new generation of Aviators into the air force to work on modernizing and our air doctrines. "
+NEE_expand_air_ports_desc:0 "As we work on building up the Air Force of New England we should bring in our new generation of Aviators into the air force to work on modernising and our air doctrines."
 NEE_naval_bombs:0 "Fighter Supporter"
-NEE_naval_bombs_desc:0 "In order to rule the skies we should work to make sure that we have the best fighters in America. With the best fighters in New England's Arsenal then our freedom is ensured. "
+NEE_naval_bombs_desc:0 "In order to rule the skies we should work to make sure that we have the best fighters in America. With the best fighters in New England's Arsenal then our freedom is ensured."
 NEE_found_wasp:0 "Found the WASPs"
-NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots commonly called the WASP. This will help provide our female aviators who wish to help defend New England an organization to do just that."
+NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots commonly called the WASP. This will help provide our female aviators who wish to help defend New England an organisation to do just that."
 NEE_boston_rockets:0 "Boston Rockets"
 NEE_boston_rockets_desc:0 "As we proceed to improve our technology in regards to aircraft, a number of leading scientists seek to push for rockets with the hope of finding a way to improve our aircraft. We should give them support and see where this takes us."
 
@@ -96,9 +96,9 @@ NEE_indepedent_new_england_desc:0 "It is time to cast our selves from the United
 
 ### Foci - Foreign Policy ###
 NEE_entente_policy:0 "Policy in the Entente"
-NEE_entente_policy_desc:0 "We are part of the Entente thanks to the Canadians. However, we should also set our own direction to help reenforce and show that we are not just a mere puppet of the Canadians."
+NEE_entente_policy_desc:0 "We are part of the Entente thanks to the Canadians. However, we should also set our own direction to help reinforce and show that we are not just a mere puppet of the Canadians."
 NEE_canadian_freindship:0 "Canadian Friendship"
-NEE_canadian_freindship_desc:0 "If we are to contribute to the Entente we must reenforce our friendship with the Canadians. They helped liberate us after all, so we should reenforce our friendship with them. This will also help improve our trade relations with them."
+NEE_canadian_freindship_desc:0 "If we are to contribute to the Entente we must reinforce our friendship with the Canadians. They helped liberate us after all, so we should reinforce our friendship with them. This will also help improve our trade relations with them."
 NEE_pacific_ties:0 "Ties with the Pacific States"
 NEE_pacific_ties_desc:0 "The Pacific States in the west coast of the United States has decided to leave the country and join the entente. We are no longer the last torch of liberty in America. As sister countries born from the United States we should encourage good relations between the two countries."
 NEE_military_training:0 "Entente Military Training"
@@ -119,7 +119,7 @@ NEE_ivy_league_desc:0 "We have decided to support the Ivy League, a group of pre
 csa_refugees:0 "CSA Refugees"
 usa_refugees:0 "MacArthur's USA Refugees"
 aus_refugees:0 "AUS Refugees"
-great_england_hurricane:0 "Great New England Huricane"
+great_england_hurricane:0 "Great New England Hurricane"
 NEE_battle_planning:0 "Joint Chiefs of Staff"
 NEE_cruiser_tank:0 "Cruiser Tanks"
 NEE_puritan_work_ethic:0 "Puritian Work Ethic"
@@ -216,7 +216,7 @@ neeflavor.14.d:0 "During the War of Independence, New England had instituted a s
 neeflavor.14.a:0 "Paramilitary Units are an Affront to Liberty!"
 neeflavor.14.b:0 "This isn't our problem..."
 neeflavor.15.t:0 "The Great New England Hurricane!"
-neeflavor.15.d:0 "Horrible news! A massive hurricane has struck our nation! This is the first time since 1869 that a hurricane has come to New England, and the repair costs are estimated to be in the hundreds of millions of dollars! Unfortunatly, several hundred people have died in the mayeham unleased by the hurricane."
+neeflavor.15.d:0 "Horrible news! A massive hurricane has struck our nation! This is the first time since 1869 that a hurricane has come to New England, and the repair costs are estimated to be in the hundreds of millions of dollars! Unfortunately, several hundred people have died in the mayhem unleashed by the hurricane."
 neeflavor.15.a:0 "Help the survivors!"
 neeflavor.15.b:0 "We can't help anyone"
 neeflavor.16.t:0 "The 1939 Presidential election"
@@ -249,7 +249,7 @@ neeflavor.22.t:0 "Actions of the Yankee Resistance"
 neeflavor.22.d:0 "The resistance of the New England population against our occupation forces continues. Once again, terrorist groups operating within New England have staged a number of attacks aimed on crippling our infrastructure, our industrial output and the morale of our forces."
 neeflavor.22.a:0 "Saboteurs bomb a number of important factories"
 neeflavor.22.b:0 "Guerrillas sabotage our transport infrastructure"
-neeflavor.22.c:0 "Guerrillas stage organized hit-and-run raids against our troops"
+neeflavor.22.c:0 "Guerrillas stage organised hit-and-run raids against our troops"
 neeflavor.23.t:0 "Attack by Yankee guerrillas!"
 neeflavor.23.d:0 "The Yankee insurrectionists in New England have launched a full-on assault against our occupation forces!"
 neeflavor.23.a:0 "Damn Them!"
